--- a/manipulator/package.xml
+++ b/manipulator/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="rajzel@todo.todo">rajzel</maintainer>
+  <maintainer email="rj@todo.todo">rj</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -49,17 +49,10 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>rospy</build_depend>
-  <build_depend>std_msg</build_depend>
   <build_depend>urdf</build_depend>
-  <build_export_depend>roscpp</build_export_depend>
-  <build_export_depend>rospy</build_export_depend>
-  <build_export_depend>std_msg</build_export_depend>
+  <build_depend>rospy</build_depend>
   <build_export_depend>urdf</build_export_depend>
-  <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
-  <exec_depend>std_msg</exec_depend>
   <exec_depend>urdf</exec_depend>
 
 
